# taxi_bot

./: .pre-commit-config.yaml  README.md  env.template  pyproject.toml  setup.cfg  taxi_bot.conf.template
taxi_bot/: __init__.py  __main__.py  bot.py  cli.py  customer.yaml  driver.yaml
taxi_bot/api_service/: common.py  customer.py  driver.py  query.py  route.py  rpc.py  schema.py
taxi_bot/channels/: __init__.py  schemas.py  telegram_impl.py  viber_impl.py
tests/: test_cancel.py  test_full_ride.py  test_simple.py  test_two_customers.py  test_two_driver.py  test_utils.py
